alignmrnt issue

--- a/src/App.css
+++ b/src/App.css
@@ -197,11 +197,10 @@
         width: 90dvw;
   }
   .project-container-list{
-    text-align: center;
-  width: fit-content;
-  display: flex;
-   flex-direction: column;
-  align-items: center;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .ourproject-container{
  display: flex;
